style: prevent links & img from popping out on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,3 +9,14 @@ html {
 	margin: 0;
 	padding: 0;
 }
+
+img,
+a {
+	touch-action: none;
+	-webkit-touch-callout: none;
+	-webkit-user-drag: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
